big algorithm refactoring: - move waitlist to ReachedElements - introduce Algorithm interface - separate CEGAR (refinement) and CBMC check - move algorithm classes to separate package - algorithms are now stateless and operate on reached set (including waitlist) passed from caller
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@716 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c